--- a/index.html
+++ b/index.html
@@ -61,6 +61,57 @@
     <!-- Banner Starts Here -->
     <section class="banner"
         style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-size: cover; background-repeat: no-repeat;">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="banner-slider">
+                        <div class="banner-content">
+                            
+                        </div>
+                        <div class="banner-content">
+                            <div class="banner-content-main">
+                                <span class="fs-6 has-line">Interior</span>
+                                <h4><a href="#">How to Get Started With Interior Design</a></h4>
+                                <div class="blog-date">
+                                    <div class="blog-date-start">
+                                        <span>March 25, 2021</span>
+                                    </div>
+                                    <div class="blog-date-end">
+                                        <span>4 min read</span>
+                                    </div>
+                                </div>
+                                <p>
+                                    Nulla et commodo turpis. Etiam hendrerit ornare pharetra. Cras eleifend purus vitae
+                                    lorem venenatis bibendum. Sed commodo mi quis augue finibus, ut feugiat erat
+                                    aliquam.
+                                </p>
+                                <a href="#" class="btn btn-default">Read More</a>
+                            </div>
+                        </div>
+                        <div class="banner-content">
+                            <div class="banner-content-main">
+                                <span class="fs-6 has-line">Interior</span>
+                                <h4><a href="details.html">How to Get Started With Interior Design</a></h4>
+                                <div class="blog-date">
+                                    <div class="blog-date-start">
+                                        <span>March 25, 2021</span>
+                                    </div>
+                                    <div class="blog-date-end">
+                                        <span>4 min read</span>
+                                    </div>
+                                </div>
+                                <p>
+                                    Nulla et commodo turpis. Etiam hendrerit ornare pharetra. Cras eleifend purus vitae
+                                    lorem venenatis bibendum. Sed commodo mi quis augue finibus, ut feugiat erat
+                                    aliquam.
+                                </p>
+                                <a href="details.html" class="btn btn-default">Read More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- Banner Ends Here -->
 
