--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
     <section class="banner"
         style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-size: cover; background-repeat: no-repeat;">
         <div class="container">
-            <div class="row">
+         <!--<div class="row">
                 <div class="col-lg-6">
                     <div class="banner-slider">
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
     <!-- Banner Ends Here -->
