--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <!--<div class="banner-slider">
-                    </div>-->
+                    <div class="banner-slider">
+                    </div>
                 </div>
             </div>
         </div>
