no more newsletter

--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@
                         <h6>Newsletter</h6>
                         <form action="#">
                             <div class="footer-wizard-form">
-                                <input type="email" placeholder="Enter Email">
-                                <button class="btn btn-default btn-default-sm">Subscribe</button>
+                                <!--<input type="email" placeholder="Enter Email">
+                                <button class="btn btn-default btn-default-sm">Subscribe</button>-->
                             </div>
                         </form>
                     </div>
