--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Theme CSS Link -->
     <link rel="stylesheet" href="dist/css/main.css">
 
-    <title>Blogy-Home</title>
+    <title>Natalie Tran</title>
 </head>
 
 <body>
@@ -60,11 +60,13 @@
 
     <!-- Banner Starts Here -->
     <section class="banner"
-        style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-size: cover; background-repeat: no-repeat;">
+        style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-position: right; background-repeat: no-repeat;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
                     <div class="banner-slider">
+                        <div class="banner-content">
+                        </div>
                     </div>
                 </div>
             </div>
