--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Banner Starts Here -->
     <section class="banner"
-        style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-size: cover; position: fixed; background-repeat: no-repeat;">
+        style="background-color: #F5F5F5; background-image: url(dist/images/banner.jpg); background-size: cover; background-repeat: no-repeat;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
