--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- Header Ends Here -->
 
     <!-- Banner Starts Here -->
-    <section class="banner"
+    <section class="banner">
         <div class="banner-img"></div>
     </section>
     <!-- Banner Ends Here -->
