--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
     <!-- Banner Starts Here -->
     <section class="banner">
-        <div class="banner-img"></div>
+        <div class="banner-img">
+        </div>
     </section>
     <!-- Banner Ends Here -->
 
