--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- Banner Starts Here -->
     <section class="banner">
         <div class="banner-img">
+            <p>test</p>
         </div>
     </section>
     <!-- Banner Ends Here -->
