--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 
     <!-- Banner Starts Here -->
     <section class="banner">
-        <div class="banner-img">
-            <p>test</p>
-        </div>
+        <div class="banner-img"></div>
     </section>
     <!-- Banner Ends Here -->
 
