--- a/index.html
+++ b/index.html
@@ -107,35 +107,21 @@
                 </div>
                 <div class="col-lg-1 col-md-2">
                     <div class="footer-wizard">
-                        <h6>Category</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Travel</a></li>
-                            <li><a href="#">Food</a></li>
-                            <li><a href="#">Lifestyle</a></li>
-                            <li><a href="#">Fashion</a></li>
-                        </ul>
+                        <h6>About</h6>
                     </div>
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3">
                     <div class="footer-wizard">
-                        <h6>Follow us</h6>
-                        <ul class="list-unstyled">
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Instagram</a></li>
-                            <li><a href="#">Youtube</a></li>
-                        </ul>
+                        <h6>Blog</h6>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-wizard">
-                        <h6>Newsletter</h6>
-                        <form action="#">
-                            <div class="footer-wizard-form">
-                                <!--<input type="email" placeholder="Enter Email">
-                                <button class="btn btn-default btn-default-sm">Subscribe</button>-->
-                            </div>
-                        </form>
+                        <h6>Contact</h6>
+                        <ul class="list-unstyled">
+                            <li><a href="mailto:tran.bn.natalie@gmail.com">tran.bn.natalie@gmail.com</a></li>
+                            <li><a href="https://www.linkedin.com/in/natalie-bn-tran/">LinkedIn</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
