changed header colors + started about me

--- a/about.html
+++ b/about.html
@@ -56,6 +56,10 @@
     <!-- Header Ends Here -->
 
     <!-- About Me -->
+    <div class="container">
+        <h3>whoami</h3>
+    </div>
+    <!-- About Me Ends Here -->
 
     <!-- Footer Starts Here -->
     <footer class="footer">
