about me content

--- a/about.html
+++ b/about.html
@@ -58,6 +58,15 @@
     <!-- About Me -->
     <div class="container">
         <h3>whoami</h3>
+        <p>
+            Hello, I'm Natalie! I'm a third year CS student at Cal Poly Pomona with hopes of
+            gaining more knowledge and experience in cybersecurity. I'm involved with
+            <a href="cysec.team"> CPP Cyber</a>
+            's CCDC team and have served on
+            <a href="calpolyswift.org"> SWIFT</a>
+            's eboard. Outside of school engagements, I enjoy spending time with friends and 
+            family, playing video games, and crocheting.
+        </p>
     </div>
     <!-- About Me Ends Here -->
 
