--- a/about.html
+++ b/about.html
@@ -61,9 +61,9 @@
         <p>
             Hello, I'm Natalie! I'm a third year CS student at Cal Poly Pomona with hopes of
             gaining more knowledge and experience in cybersecurity. I'm involved with
-            <a href="cysec.team"> CPP Cyber</a>
+            <a href="https://cysec.team/"> CPP Cyber</a>
             's CCDC team and have served on
-            <a href="calpolyswift.org"> SWIFT</a>
+            <a href="https://calpolyswift.org"> SWIFT</a>
             's eboard. Outside of school engagements, I enjoy spending time with friends and 
             family, playing video games, and crocheting.
         </p>
