fix font, about me no footer

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
     </div>
     <!-- About Me Ends Here -->
 
-    <!-- Footer Starts Here -->
+    <!-- Footer Starts Here 
     <footer class="footer">
         <div class="container">
             <div class="row justify-content-lg-between">
@@ -83,17 +83,17 @@
                 </div>
                 <div class="col-lg-1 col-md-2">
                     <div class="footer-wizard">
-                        <h6>About</h6>
+                        <h5>About</h5>
                     </div>
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3">
                     <div class="footer-wizard">
-                        <h6>Blog</h6>
+                        <h5>Blog</h5>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-wizard">
-                        <h6>Contact</h6>
+                        <h5>Contact</h5>
                         <ul class="list-unstyled">
                             <li><a href="mailto:tran.bn.natalie@gmail.com">tran.bn.natalie@gmail.com</a></li>
                             <li><a href="https://www.linkedin.com/in/natalie-bn-tran/">LinkedIn</a></li>
@@ -107,7 +107,7 @@
             </div>
         </div>
     </footer>
-    <!-- Footer Ends Here -->
+     Footer Ends Here -->
     <!-- jQuery JS Link -->
     <script src="dist/js/jquery-3.6.0.min.js"></script>
 
