add about me to home

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <!-- Menu Starts Here -->
                 <div class="main-menu d-none d-lg-flex">
                     <ul class="main-menu-items list-unstyled">
-                        <li><a href="index.html" class="main-menu-item active-item">Home</a></li>
-                        <li><a href="about.html" class="main-menu-item">About</a></li>
+                        <li><a href="#banner" class="main-menu-item active-item">Home</a></li>
+                        <li><a href="#about" class="main-menu-item">About</a></li>
                         <li><a href="#" class="main-menu-item">Blog</a></li>
                     </ul>
                 </div>
@@ -60,6 +60,23 @@
         <div class="banner-img"></div>
     </section>
     <!-- Banner Ends Here -->
+
+    <!-- About Me Starts Here -->
+    <div class="about">
+        <div class="container">
+            <h3>whoami</h3>
+            <p>
+                Hello, I'm Natalie! I'm a third year CS student at Cal Poly Pomona with hopes of
+                gaining more knowledge and experience in cybersecurity. I'm involved with
+                <a href="https://cysec.team/"> CPP Cyber</a>
+                's CCDC team and have served on
+                <a href="https://calpolyswift.org"> SWIFT</a>
+                's eboard. Outside of school engagements, I enjoy spending time with friends and 
+                family, playing video games, and crocheting.
+            </p>
+        </div>
+    </div>
+    <!-- About Me Ends Here -->
 
     <!-- Post Feture Starts Here -->
     <!--<section class="section-padding">
