--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!-- Menu Starts Here -->
                 <div class="main-menu d-none d-lg-flex">
                     <ul class="main-menu-items list-unstyled">
-                        <li><a href="#banner" class="main-menu-item active-item">Home</a></li>
+                        <li><a href="#home" class="main-menu-item">Home</a></li>
                         <li><a href="#about" class="main-menu-item">About</a></li>
                         <li><a href="#" class="main-menu-item">Blog</a></li>
                     </ul>
@@ -56,13 +56,13 @@
     <!-- Header Ends Here -->
 
     <!-- Banner Starts Here -->
-    <section class="banner">
+    <section id="home" class="banner">
         <div class="banner-img"></div>
     </section>
     <!-- Banner Ends Here -->
 
     <!-- About Me Starts Here -->
-    <div class="about">
+    <section id="about">
         <div class="container">
             <h3>whoami</h3>
             <p>
@@ -75,7 +75,7 @@
                 family, playing video games, and crocheting.
             </p>
         </div>
-    </div>
+    </section>
     <!-- About Me Ends Here -->
 
     <!-- Post Feture Starts Here -->
