--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
             <h3>whoami</h3>
             <p>
                 Hello, I'm Natalie! I'm a third year CS student at Cal Poly Pomona with hopes of
-                gaining more knowledge and experience in cybersecurity. I'm involved with
+                gaining more knowledge and experience in cybersecurity. I'm involved with the
+                CCDC team at
                 <a href="https://cysec.team/"> CPP Cyber</a>
-                's CCDC team and have served on
+                 and have served on
                 <a href="https://calpolyswift.org"> SWIFT</a>
                 's eboard. Outside of school engagements, I enjoy spending time with friends and 
                 family, playing video games, and crocheting.
