add class to about me

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Banner Ends Here -->
 
     <!-- About Me Starts Here -->
-    <section id="about">
+    <section id="about" class="about">
         <div class="container">
             <h3>whoami</h3>
             <p>
