--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <ul class="main-menu-items list-unstyled">
                         <li><a href="#home" class="main-menu-item">Home</a></li>
                         <li><a href="#about" class="main-menu-item">About</a></li>
-                        <li><a href="#" class="main-menu-item">Blog</a></li>
+                        <li><a href="blog.html" class="main-menu-item">Blog</a></li>
                     </ul>
                 </div>
                 <!-- Menu Items Ends Here -->
@@ -146,6 +146,7 @@
         </div>
     </footer>
     <!-- Footer Ends Here -->
+     
     <!-- jQuery JS Link -->
     <script src="dist/js/jquery-3.6.0.min.js"></script>
 
