change blog a little

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <!-- Menu Starts Here -->
                 <div class="main-menu d-none d-lg-flex">
                     <ul class="main-menu-items list-unstyled">
-                        <li><a href="#home" class="main-menu-item">Home</a></li>
+                        <li><a href="index.html" class="main-menu-item">Home</a></li>
                         <li><a href="#about" class="main-menu-item">About</a></li>
                         <li><a href="blog.html" class="main-menu-item">Blog</a></li>
                     </ul>
@@ -72,7 +72,9 @@
                 <a href="https://cysec.team/"> CPP Cyber</a>
                  and have served on
                 <a href="https://calpolyswift.org"> SWIFT</a>
-                's eboard. Outside of school engagements, I enjoy spending time with friends and 
+                's eboard.
+                <br><br>
+                Outside of school engagements, I enjoy spending time with friends and 
                 family, playing video games, and crocheting.
             </p>
         </div>
@@ -121,12 +123,12 @@
                 </div>
                 <div class="col-lg-1 col-md-2">
                     <div class="footer-wizard">
-                        <h5>About</h5>
+                        <!-- <h5>About</h5> -->
                     </div>
                 </div>
                 <div class="col-lg-2 offset-lg-1 col-md-3">
                     <div class="footer-wizard">
-                        <h5>Blog</h5>
+                        <!-- <h5>Blog</h5> -->
                     </div>
                 </div>
                 <div class="col-lg-4">
