--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
                 <!-- Menu Starts Here -->
                 <div class="main-menu d-none d-lg-flex">
                     <ul class="main-menu-items list-unstyled">
-                        <li><a href="index.html#home" class="main-menu-item">Home</a></li>
+                        <li><a href="index.html" class="main-menu-item">Home</a></li>
                         <li><a href="index.html#about" class="main-menu-item">About</a></li>
                         <li><a href="blog.html" class="main-menu-item">Blog</a></li>
                     </ul>
@@ -56,9 +56,15 @@
     <!-- Header Ends Here -->
 
     <!-- Blog Starts Here -->
+     
+    <!-- Blog Header Starts Here -->
     <div class="container">
         <h3>Blogs</h3>
+        <hr>
     </div>
+    <!-- Blog Header Ends Here -->
+
+
     <!-- Blog Ends Here -->
 
     <!-- jQuery JS Link -->
