change menu font color

--- a/blog.html
+++ b/blog.html
@@ -56,13 +56,13 @@
     <!-- Header Ends Here -->
 
     <!-- Blog Starts Here -->
-     
+
     <!-- Blog Header Starts Here -->
     <div class="container">
         <h3>Blogs</h3>
         <hr>
     </div>
-    <!-- Blog Header Ends Here -->
+    <!-- Blog Header Ends Here -->g
 
 
     <!-- Blog Ends Here -->
