blog page layout

--- a/blog.html
+++ b/blog.html
@@ -56,15 +56,37 @@
     <!-- Header Ends Here -->
 
     <!-- Blog Starts Here -->
-
     <!-- Blog Header Starts Here -->
     <div class="container">
-        <h3>Blogs</h3>
-        <hr>
+        <div class="blog-header">
+            <h3>Blogs</h3>
+            <p>My experiences and things I've worked on.</p>
+        </div>
     </div>
-    <!-- Blog Header Ends Here -->g
+    <!-- Blog Header Ends Here -->
 
-
+    <!-- Blog Posts Start Here
+    <div class="container">
+        <div class="blog-post">
+            <hr>
+            <div class="row align-items-center">
+                <div class="col-12 col-md-auto">
+                    <p class="mb-1 mb-md-0">mm.dd.yy</p>
+                </div>
+                <div class="col-12 col-md ps-md-5">
+                    <div class="mb-1 mb-md-0">
+                        <h4><a href="[BLOG POST]">TITLE</a></h4>
+                        <p>Description</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-auto text-md-end">
+                    <img src="[IMAGE]" class="img-fluid" style="max-height: 130px;">
+                </div>
+            </div>
+            <hr>
+        </div>
+    </div>
+    Blog Posts Ends Here -->
     <!-- Blog Ends Here -->
 
     <!-- jQuery JS Link -->
