edit blog layout

--- a/blog.html
+++ b/blog.html
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="blog-header">
             <h3>Blogs</h3>
-            <p>My experiences and things I've worked on.</p>
+            <p>Experiences and things I've worked on.</p>
         </div>
     </div>
     <!-- Blog Header Ends Here -->
@@ -78,9 +78,6 @@
                         <h4><a href="[BLOG POST]">TITLE</a></h4>
                         <p>Description</p>
                     </div>
-                </div>
-                <div class="col-12 col-md-auto text-md-end">
-                    <img src="[IMAGE]" class="img-fluid" style="max-height: 130px;">
                 </div>
             </div>
             <hr>
