banner and blog

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="header">
                 <!-- Logo Starts Here -->
-                <a href="index.html">
+                <a href="/">
                     <img src="dist/images/logo.svg" width="80" height="80">
                 </a>
                 <!-- Logo Ends Here -->
@@ -44,9 +44,9 @@
                 <!-- Menu Starts Here -->
                 <div class="main-menu d-none d-lg-flex">
                     <ul class="main-menu-items list-unstyled">
-                        <li><a href="index.html" class="main-menu-item">Home</a></li>
+                        <li><a href="/" class="main-menu-item">Home</a></li>
                         <li><a href="#about" class="main-menu-item">About</a></li>
-                        <li><a href="blog.html" class="main-menu-item">Blog</a></li>
+                        <li><a href="/blog" class="main-menu-item">Blog</a></li>
                     </ul>
                 </div>
                 <!-- Menu Items Ends Here -->
@@ -57,7 +57,11 @@
 
     <!-- Banner Starts Here -->
     <section id="home" class="banner">
-        <div class="banner-img"></div>
+        <!--<section class="banner-img"></section>-->
+        <section class="banner-img"></section>
+        <section class="banner-text">
+            Natalie Tran
+        </section>
     </section>
     <!-- Banner Ends Here -->
 
@@ -68,11 +72,9 @@
             <p>
                 Hello, I'm Natalie! I'm a third year CS student at Cal Poly Pomona with hopes of
                 gaining more knowledge and experience in cybersecurity. I'm involved with the
-                CCDC team at
-                <a href="https://cysec.team/"> CPP Cyber</a>
-                 and have served on
-                <a href="https://calpolyswift.org"> SWIFT</a>
-                's eboard.
+                CCDC team at 
+                <a href="https://cysec.team/">CPP Cyber</a> and have served on 
+                <a href="https://calpolyswift.org">SWIFT</a>'s eboard.
                 <br><br>
                 Outside of school engagements, I enjoy spending time with friends and 
                 family, playing video games, and crocheting.
@@ -142,7 +144,7 @@
                 </div>
             </div>
             <div class="copy-right">
-                <p>@ 2025 - Natalie Tran</p>
+                <p>@ 2026 - Natalie Tran</p>
                 <p>Designed & Develop by <a href="https://zakirsoft.com/">Zakirsoft</a></p>
             </div>
         </div>
