--- a/index.html
+++ b/index.html
@@ -9,10 +9,6 @@
     <!-- Bootstrap CSS Link -->
     <link rel="stylesheet" href="dist/css/vendor/bootstrap.min.css">
 
-    <!-- Slick CSS Link -->
-    <link rel="stylesheet" href="dist/css/vendor/slick.css">
-    <link rel="stylesheet" href="dist/css/vendor/slick-theme.css">
-
     <!-- Icon Library Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
@@ -24,9 +20,9 @@
 
 <body>
     <!-- Header Starts Here -->
-    <header>
+    <header class="header">
         <div class="container">
-            <div class="header">
+            <div class="header-inner">
                 <!-- Logo Starts Here -->
                 <a href="/">
                     <img src="dist/images/logo.svg" width="80" height="80">
