--- a/blog.html
+++ b/blog.html
@@ -58,20 +58,20 @@
             <h3>Blogs</h3>
             <p>Experiences and things I've worked on.</p>
         </div>
+        <hr>
     </div>
     <!-- Blog Header Ends Here -->
 
     <!-- Blog Posts Start Here
     <div class="container">
         <div class="blog-post">
-            <hr>
             <div class="row align-items-center">
                 <div class="col-12 col-md-auto">
                     <p class="mb-1 mb-md-0">mm.dd.yy</p>
                 </div>
                 <div class="col-12 col-md ps-md-5">
                     <div class="mb-1 mb-md-0">
-                        <h4><a href="[BLOG POST]">TITLE</a></h4>
+                        <h4><a href="/blog/[BLOG POST]">TITLE</a></h4>
                         <p>Description</p>
                     </div>
                 </div>
@@ -90,9 +90,6 @@
 
     <!-- Menu JS Link -->
     <script src="dist/js/menu.js"></script>
-
-    <!-- Slick JS Link -->
-    <script src="dist/js/slick.min.js"></script>
 
     <!-- Custom JS Link -->
     <script src="dist/js/main.js"></script>
